--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='admaven-placement' content="Bqda8qHg9"\>
     <meta name='admaven-placement' content="BqdYFrHk5"\>
 
-    <meta name="monetag" content="7080afe390936c69983d2873d3cff4b2">
+    <meta content="7080afe390936c69983d2873d3cff4b2" name="monetag"\>
 
 
 
